@@ -3,12 +3,14 @@ Changelog
 
 8.6-dev - (unreleased)
 ----------------------
+* Change: Simplified data and maps frontpage.
+  [demarant fixes #16735]
 * Upgrade step: Within www/portal_tinymce/@@tinymce-controlpanel
    - Add the following TinyMCE style:
      - Mark text for presentation|span|markPresentationalText
   [ichimdav refs #16879]
-* Change: Simplified data and maps frontpage.
-  [demarant fixes #16735]
+* Feature: added help text to presentation_view for authorised users
+  [ichimdav refs #16879]
 * Bug fix: Scroll content only inside the slide body for the presentation_view
   [ichimdav refs #16879]
 * Bug fix: Removed some style in IE8fixes and IE9fixes for compatibility with
